<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/default_tz_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/default_tz_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tz" />

        <EditText
            android:id="@+id/default_tz_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:minWidth="180dp"
            android:text="" />

        <Button
            android:id="@+id/default_tz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/rescue_tz_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/default_tz_layout">

        <TextView
            android:id="@+id/rescue_tz_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescue_tz" />

        <EditText
            android:id="@+id/rescue_tz_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:minWidth="180dp"
            android:text="" />

        <Button
            android:id="@+id/rescue_tz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/function_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rescue_tz_layout">

        <Button
            android:id="@+id/function_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescue_streak" />

        <Button
            android:id="@+id/function_clear"
            android:layout_marginStart="10dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescue_clear" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ps_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/ps_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="当前多邻国时区：Asia/Hong_Kong"
            android:text="" />

        <TextView
            android:id="@+id/ps_text"
            android:alpha="0.6"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rescue_desc" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>